Convert bgp-route-target to OSGi DS
This is really a simplistic component, convert it to use OSGi DS
and other frameworks.

JIRA: BGPCEP-940
Change-Id: I0781ce8bc40c1245292e950be939a17d2aa3d5e7
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>