@@ -7,8 +7,9 @@
  */
 package org.opendaylight.protocol.bgp.route.targetcontrain.impl.activators;
 
-import java.util.Collections;
 import java.util.List;
+import javax.inject.Inject;
+import javax.inject.Singleton;
 import org.kohsuke.MetaInfServices;
 import org.opendaylight.protocol.bgp.openconfig.routing.policy.spi.registry.AbstractBGPStatementProviderActivator;
 import org.opendaylight.protocol.bgp.openconfig.routing.policy.spi.registry.StatementProviderActivator;
@@ -16,12 +17,22 @@ import org.opendaylight.protocol.bgp.openconfig.routing.policy.spi.registry.Stat
 import org.opendaylight.protocol.bgp.route.targetcontrain.impl.route.policy.ClientAttributePrependHandler;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.route.target.constrain.rev180618.ClientAttributePrepend;
 import org.opendaylight.yangtools.concepts.Registration;
+import org.osgi.service.component.annotations.Component;
 
+@Singleton
+@Component(immediate = true, service = StatementProviderActivator.class,
+           property = "type=org.opendaylight.protocol.bgp.route.targetcontrain.impl.activators.StatementActivator")
 @MetaInfServices(value = StatementProviderActivator.class)
 public final class StatementActivator extends AbstractBGPStatementProviderActivator {
+    @Inject
+    public StatementActivator() {
+        // Exposed for DI
+    }
+
     @Override
     protected synchronized List<Registration> startImpl(final StatementRegistryProvider provider) {
-        return Collections.singletonList(provider.registerBgpActionAugmentationPolicy(ClientAttributePrepend.class,
+        return List.of(
+            provider.registerBgpActionAugmentationPolicy(ClientAttributePrepend.class,
                 ClientAttributePrependHandler.getInstance()));
     }
 }
