@@ -7,8 +7,9 @@
  */
 package org.opendaylight.protocol.bgp.route.targetcontrain.impl.activators;
 
-import java.util.Collections;
 import java.util.List;
+import javax.inject.Inject;
+import javax.inject.Singleton;
 import org.kohsuke.MetaInfServices;
 import org.opendaylight.protocol.bgp.openconfig.spi.AbstractBGPTableTypeRegistryProviderActivator;
 import org.opendaylight.protocol.bgp.openconfig.spi.BGPTableTypeRegistryProvider;
@@ -17,20 +18,29 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.open
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.route.target.constrain.rev180618.RouteTargetConstrainSubsequentAddressFamily;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.types.rev200120.Ipv4AddressFamily;
 import org.opendaylight.yangtools.concepts.AbstractRegistration;
+import org.osgi.service.component.annotations.Component;
 
 /**
  * Registers Route Target constrains Family type.
  *
  * @author Claudio D. Gasparini
  */
+@Singleton
+@Component(immediate = true, service = BGPTableTypeRegistryProviderActivator.class,
+           property = "type=org.opendaylight.protocol.bgp.route.targetcontrain.impl.activators.TableTypeActivator")
 @MetaInfServices(value = BGPTableTypeRegistryProviderActivator.class)
 public final class TableTypeActivator extends AbstractBGPTableTypeRegistryProviderActivator {
+    @Inject
+    public TableTypeActivator() {
+        // Exposed for DI
+    }
+
     @Override
     protected List<AbstractRegistration> startBGPTableTypeRegistryProviderImpl(
             final BGPTableTypeRegistryProvider provider) {
-        return Collections.singletonList(
-                provider.registerBGPTableType(Ipv4AddressFamily.class,
-                        RouteTargetConstrainSubsequentAddressFamily.class, ROUTETARGETCONSTRAIN.class)
+        return List.of(
+            provider.registerBGPTableType(Ipv4AddressFamily.class, RouteTargetConstrainSubsequentAddressFamily.class,
+                ROUTETARGETCONSTRAIN.class)
         );
     }
 }
